配置多入口多模块 新增商家系统模块 针对性配置

--- a/App/Home/View/Login/index.html
+++ b/App/Home/View/Login/index.html
@@ -94,7 +94,7 @@
             password:password,
         },function(res){
             if(res.err==0){
-                layer.msg(res.msg,{time: 1000},function(){location.href="/"});
+                layer.msg(res.msg,{time: 1000},function(){location.href="/Home/Index/index"});
             }else{
                 layer.msg(res.msg);
             }
