--- a/App/Home/View/Public/layout.html
+++ b/App/Home/View/Public/layout.html
@@ -223,7 +223,7 @@
             <ul class="sidebar-nav">
                 <li class="sidebar-nav-link">
 
-                    <a href="/">
+                    <a href="{:U('Index/index')}">
                         <i class="am-icon-home sidebar-nav-link-logo"></i> 首页
                     </a>
                 </li>
