--- a/App/Home/View/Admin/index.html
+++ b/App/Home/View/Admin/index.html
@@ -106,6 +106,18 @@
 
                 }
             },{
+                key: 'last_login_time',
+                remind: '最后登录时间',
+                width: '100px', 
+                text: '最后登录时间',
+                sorting: ''
+            },{
+                key: 'ip',
+                remind: 'IP地址',
+                width: '100px', 
+                text: 'IP地址',
+                sorting: ''
+            },{
                 key: 'action',
                 remind: '操作按钮',
                 width: '100px',
