--- a/App/Home/View/Role/index.html
+++ b/App/Home/View/Role/index.html
@@ -11,7 +11,7 @@
                     <div class="am-u-sm-12 am-u-md-12 am-u-lg-12">
                         <div class="widget am-cf">
                             <div class="widget-head am-cf">
-                                <div class="widget-title  am-cf">管理员列表</div>
+                                <div class="widget-title  am-cf">角色列表</div>
 
 
                             </div>
@@ -21,7 +21,7 @@
                                     <div class="am-form-group">
                                         <div class="am-btn-toolbar">
                                             <div class="am-btn-group am-btn-group-xs">
-                                                <button type="button" onclick="location.href='addAdmin'" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
+                                                <button type="button" onclick="location.href='addRole'" class="am-btn am-btn-default am-btn-success"><span class="am-icon-plus"></span> 新增</button>
                                             </div>
                                         </div>
                                     </div>
@@ -29,7 +29,7 @@
 
                                 <div class="am-u-sm-6 am-u-md-3 am-u-lg-2">
                                     <div class="am-input-group am-input-group-sm tpl-form-border-form cl-p" style="margin-left: 630px;">
-                                        <input name="user_name" type="text" class="am-form-field " style="width:200px;">
+                                        <input name="role_name" type="text" class="am-form-field " style="width:200px;">
                                         <span class="am-input-group-btn">
                                             <button class="am-btn search-action am-btn-default am-btn-success tpl-table-list-field am-icon-search" type="button"></button>
                                             <button class="am-btn reset-action am-btn-default am-btn-success tpl-table-list-field" type="button">重置</button>
@@ -54,7 +54,6 @@
  <block name="js">
 <script type="text/javascript">
     var table = document.querySelector('table');
-    console.log(table);
     var TGM = table.GM({
         supportRemind: true
         ,gridManagerName: 'test'
@@ -62,21 +61,27 @@
         ,height: '570px'
         ,supportAjaxPage:true
         ,supportSorting: true
-        ,ajax_url: '{:U("Admin/index")}'
+        ,ajax_url: '{:U("Role/index")}'
         ,ajax_type: 'POST'
         ,query: {pluginId: 1}
         ,pageSize:20
         ,columnData: [{
                 key: 'id',
-                remind: '管理员ID',
-                width: '50px',
-                text: '管理员ID',
+                remind: 'ID',
+                width: '100px', 
+                text: '角色ID',
                 sorting: ''
             },{
-                key: 'user_name',
-                remind: '名称',
+                key: 'role_name',
+                remind: '角色名称',
                 width: '100px', 
-                text: '名称',
+                text: '角色名称',
+                sorting: ''
+            },{
+                key: 'rule_id',
+                remind: '拥有权限',
+                width: '100px', 
+                text: '拥有权限',
                 sorting: ''
             },{
                 key: 'add_time',
@@ -85,49 +90,6 @@
                 text: '加入时间',
                 sorting: ''
             },{
-                key: 'status',
-                remind: '状态',
-                width: '50px',
-                text: '状态',
-                template: function(status, rowObject){
-                    if(rowObject.status==1){
-                        return '<div class="tpl-switch">'
-                                    +'<input type="checkbox" onclick="change_status(2,'+rowObject.id+',this)" checked name="status" class="ios-switch bigswitch tpl-switch-btn">'
-                                    +'<div class="tpl-switch-btn-view">'
-                                    +'<div>'
-                                +'</div>'
-                    }else{
-                        return '<div class="tpl-switch">'
-                                    +'<input type="checkbox" onclick="change_status(1,'+rowObject.id+',this)"   name="status" class="ios-switch bigswitch tpl-switch-btn">'
-                                    +'<div class="tpl-switch-btn-view">'
-                                    +'<div>'
-                                +'</div>'
-                    }
-
-                }
-            },{
-                key: 'last_login_time',
-                remind: '最后登录时间',
-                width: '100px', 
-                text: '最后登录时间',
-                sorting: ''
-            },{
-                key: 'ip',
-                remind: 'IP地址',
-                width: '100px', 
-                text: 'IP地址',
-                sorting: ''
-            },{
-                key: 'action',
-                remind: '操作按钮',
-                width: '100px',
-                text: '操作',
-                template: function(action, rowObject){
-                    return '<button type="button" class="am-btn am-btn-danger" style="color:#fff; padding:5px; margin-left:5px;"  onclick="del('+rowObject.id+',\''+rowObject.user_name+'\')">删除</button>'
-
-                }
-            }
-            /*{
                 key: 'action',
                 remind: '操作按钮',
                 width: '100px',
@@ -135,10 +97,10 @@
                 template: function(action, rowObject){
                     return '<button type="button" class="am-btn am-btn-secondary" style="color:#fff; padding:5px; margin-left:5px;" onclick="edit('+rowObject.id+')">编辑</button>'
 
-                        +'<button type="button" class="am-btn am-btn-danger" style="color:#fff; padding:5px; margin-left:5px;"  onclick="del('+rowObject.id+')">删除</button>'
+                        +'<button type="button" class="am-btn am-btn-danger" style="color:#fff; padding:5px; margin-left:5px;"  onclick="del('+rowObject.id+',\''+rowObject.role_name+'\')">删除</button>'
 
                 }
-            }*/
+            }
         ]
         // 分页前事件
         ,pagingBefore: function(query){
@@ -205,7 +167,7 @@
     // 绑定搜索事件
     document.querySelector('.search-action').addEventListener('click', function () {
         var _query = {
-            user_name: document.querySelector('[name="user_name"]').value,
+            role_name: document.querySelector('[name="role_name"]').value,
         };
         table.GM('setQuery', _query).GM('refreshGrid', function () {
             console.log('搜索成功...');
@@ -215,7 +177,7 @@
     // 绑定重置
     document.querySelector('.reset-action').addEventListener('click', function () {
          var _query = {
-            user_name:document.querySelector('[name="user_name"]').value = '',
+            role_name:document.querySelector('[name="role_name"]').value = '',
         };
          table.GM('setQuery', _query).GM('refreshGrid', function () {
             console.log('重置成功...');
@@ -223,38 +185,14 @@
 
     });
 
-
-
-    function change_status(val,id,obj){
-        $.post('{:U("Admin/changeStatus")}',{
-            status:val,
-            id:id
-        },function(res){
-            if(res.err==0){
-                layer.msg(res.msg,{time:500},function(){
-                    if(val){
-                        $(obj).attr('onclick',"change_status(1,"+id+",this)")
-                    }else{
-                        $(obj).attr('onclick',"change_status(2,"+id+",this)")
-                    }
-                });
-
-            }else{
-                layer.msg(res.msg);
-            }
-        })
-    }
-
-
-
     //删除
     function del(id,name){
-        layer.confirm('确定删除账号('+name+')？', {
+        layer.confirm('确定删除角色('+name+')？', {
           btn: ['确认', '取消']
           ,btn3: function(index, layero){
           }
         }, function(index, layero){
-            $.post('{:U("Admin/delAdmin")}',{
+            $.post('{:U("Role/delRole")}',{
                 id:id
             },function(res){
                 if(res.err==0){
