新增角色编辑功能，修改排序bug

--- a/App/Home/View/Role/index.html
+++ b/App/Home/View/Role/index.html
@@ -204,9 +204,13 @@
         }, function(index){
           
         });
-
-
     }
+
+
+    function edit(id) {
+        location.href = "/Home/Role/editRole/id/"+id;
+    }
+
 
 </script>
 </block>
