--- a/App/Home/View/Public/layout.html
+++ b/App/Home/View/Public/layout.html
@@ -12,7 +12,7 @@
     <meta http-equiv="Cache-Control" content="no-siteapp" />
     <link rel="icon" type="image/png" href="__PUBLIC__/assets/i/favicon.png">
     <link rel="apple-touch-icon-precomposed" href="__PUBLIC__/assets/i/app-icon72x72@2x.png">
-    <meta name="apple-mobile-web-app-title" content="Amaze UI" />
+    <meta name="apple-mobile-web-app-title" content="" />
     <script src="__PUBLIC__/assets/js/echarts.min.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/assets/css/amazeui.min.css" />
     <link rel="stylesheet" href="__PUBLIC__/assets/css/amazeui.datatables.min.css" />
